X3 C++ PluginFramework

2011-07-08

    * Refact and optimize delay-loading code in PluginManager.
    * Move interface file to Interface\ObserverExample in ChangeObserverExample.
    * Add a test case for observer delay-load feature.
    * Add class cache UML diagram.

------v1.1.1------

2011-07-05

    * Add UML diagram.
    * Remove 'ASSERT(0 == nul)' in XComPtr.h
    * Add notes in Ix_PluginLoader.h and XModuleImpl.h

2011-07-04

    * Add GetLocalAppDataPath() using SHGetKnownFolderPath for Vista, Win7 and Win2008.
    * Move delay-load implement code into DelayLoad.cpp
    * Update plugin version to 1.0.1.0 in Version.rc2

2011-07-01

    * Support delay-load feature for logging observer plugins.

------v1.1.0------

2011-06-30

    * Remove RTTI (not use dynamic_cast).
    * Add XClassMacro.h
    * Remove FileUtility/Plugin.cpp
    * Add namespace for GetAppWorkPath().

------v1.0.11------

2011-06-27

    * Change vector to list in StringTable, ChangeManager and PluginManager.
    * Add x3::has_value() in vecfunc.h.

2011-06-21

    * Remove IsDelayPlugin(), so all plugins will be delay loaded.
    * Refact in Cx_PluginManager.
    * Avoid some callings between plugins when loading plugins.
    * Call DestroyWnd() in CEmbedWnd::~CEmbedWnd().
    * Fix copy construction of Cx_Interface and Cx_ConfigSection for vc60.
    * Returns true if a plugin has already loaded before in Cx_PluginLoader::LoadPluginOrDelay().

2011-06-19

    * Add '-shared' to C_FLAGS only for plugins (lib*.so, except *.app).
    * Add 'static const' keyword to class id definition.

    * Include PluginManager.h in XComCreator.h, so x3GetObjectFactory can use the exist handle of PluginManager.
    * Add '-fPIC' to C_FLAGS_SO in config.mk

2011-06-17

    * Remove Ix_ObjectFactory::HasCreatorReplaced, SpecialInterfaceObject.
    * Remove iidSpecial field in X3CLASSENTRY.

------v1.0.10------

2011-06-16

    * Add x3 namespace in revision 159.
    * Change interfaces to classes.
